It`s fully functionaled version of dbtests. Supported mock_object, berkeley_db_object.

--- a/dbtests/README.html
+++ b/dbtests/README.html
@@ -21,31 +21,31 @@
 	<li>в процессе разработки создать тесты для данного обьекта базы данных в директории unit_tests
 	<li>унаследовать данный экземпляр объекта базы данных от dbobject_interface
 	<li>добавить определение соответствуюшей внутренней переменной Make файла в файл indDbobjects для определения 
-	включения/выключения компиляции исходных файлов (indHfiles indSfiles indOfiles) объекта базы данных и библиотек 
-	обьекта базы данных (indLfiles)
+	включения/выключения компиляции исходных файлов (indHfiles indOfiles) объекта базы данных и библиотек 
+	обьекта базы данных (indLibs), указать (если необходимо) пути к заголовочным файлам и библиотекам (indIpath и indLpath соответственно)
 	<li>добавить определение соответствующей переменной компилятора в файл dbobjects.h позволяющей включать/отключать 
-	включение (inclution) исходных файлов объекта базы данных в файлы src/main.cpp unit_tests/all_tests.cpp и создание при помощи оператора new
+	включение (includion) исходных файлов объекта базы данных в файлы src/main.cpp unit_tests/all_tests.cpp и создание при помощи оператора new
 	соответствующего экземпляра обьекта базы данных  в функции main файла src/main.cpp
 	</ol>
-<br>Это позволит позднее (скажем, в случае отсутствия необходимости тестироваь данную БД или отсутствия в наличии самой БД)
+<br>Это позволит позднее (скажем, в случае отсутствия необходимости тестировать данную БД или отсутствия в наличии самой БД)
 отключить использование данного объекта комментированием определений соотв двух переменных - в indDbobjects и dbobjects.h<br>
 
 <br>
 	Добавление  нового теста базы данных:
 	<ol>
-	<li>в директории еуыеыs создать соответствующие исходные файлы
+	<li>в директории tests создать соответствующие исходные файлы
 	<li>в процессе разработки создать тесты для данного теста базы данных в директории unit_tests
 	<li>унаследовать данный экземпляр объекта базы данных от test_interface
 	<li>добавить определение соответствуюшей внутренней переменной Make файла в файл indTests для определения 
-	включения/выключения компиляции исходных файлов (indHfiles indSfiles indOfiles) теста базы данных
+	включения/выключения компиляции исходных файлов (indHfiles indOfiles) теста базы данных
 	<li>добавить определение соответствующей переменной компилятора в файл tests.h позволяющей включать/отключать 
-	включение (inclution) исходных файлов объекта базы данных в файлы src/main.cpp unit_tests/all_tests.cpp и создание при помощи оператора new
+	включение (includion) исходных файлов объекта базы данных в файлы src/main.cpp unit_tests/all_tests.cpp и создание при помощи оператора new
 	соответствующего экземпляра теста базы данных  в функции main файла src/main.cpp
 	</ol>
 <br>Это позволит позднее (скажем, в случае отсутствия необходимости выполнять данный тест)
 отключить использование данного теста комментированием определений соотв двух переменных - в indTests и tests.h<br>
 <br>
-По умолчанию программа вываливает результаты тестирования в html формате на консоль. Для сохранения (и понимания - все идет в UTF-8 $-) результатов нужно перенаправить вывод программы в файл.
+По умолчанию программа вываливает результаты тестирования в формате html файла в стандартный вывод. Для сохранения (и понимания - все идет в UTF-8 $-) результатов нужно перенаправить вывод программы в файл.
 <br>
 <br>
 </body>
